<resources>
    <string name="app_name">RfidPassiveApiTestappAndroid</string>
    <string name="menu_refresh">Refresh</string>
    <string name="prefs_name">RfidPassiveApiPreferences</string>
    <string name="title_activity_settings">@string/menu_settings</string>
    <string name="connect_timeout_text">Connect Timeout (ms)</string>
    <string name="write_timeout_text">Write Timeout (ms)</string>
    <string name="first_read_timeout_text">First Read/Notify Timeout (ms)</string>
    <string name="later_read_timeout_text">Later Read/Notify Timeout (ms)</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="timeouts_heading">Timeouts</string>
    <string name="title_activity_main">Find BLE device</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_settings">Settings</string>
    <string name="unknown_device">Unknown device</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_connecting">Connecting</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="reader_is_hf">HF reader (for ISO-15693/ISO-14443 tags)</string>
    <string name="reader_is_uhf">UHF reader (for EPC tags)</string>
    <string name="firmware_version_value">Firmware-version = %1$s</string>
    <string name="availability_status_text">Available:</string>
    <string name="availability_status_default_status">@string/availability_status_not_available</string>
    <string name="availability_status_available">yes</string>
    <string name="availability_status_not_available">no</string>
    <string name="battery_text">Battery:</string>
    <string name="battery_status_text">status</string>
    <string name="battery_status_default_value">0</string>
    <string name="battery_level_text">level</string>
    <string name="battery_level_default_value">0.00 V</string>
    <string name="battery_level_value">%1$s V</string>
    <string name="category_command_select_category">Select CMD category</string>
    <string name="category_command_common">BLE CMD</string>
    <string name="category_command_ble">BLE CONFIG</string>
    <string name="category_command_memory">BLE MEMORY</string>
    <string name="category_command_tertium">TERTIUM CMD</string>
    <string name="category_command_tag">TAG CMD</string>
    <string name="category_command_zhaga">ZHAGA CMD</string>
    <string name="command_select_category_first"></string>
    <string name="command_select_command">Select Operation</string>
    <string name="command_test_availability">Test Availability</string>
    <string name="test_availability_value">Availability = %1$s</string>
    <string name="command_sounds">Sound</string>
    <string name="command_light">Light</string>
    <string name="command_stop_light">Stop Light</string>
    <string name="command_set_shutdown_time">Set Shutdown Time</string>
    <string name="command_get_shutdown_time">Get Shutdown Time</string>
    <string name="get_shutdown_time_value">Shutdown-time = %1$d s</string>
    <string name="command_set_rf_power">Set RF Power</string>
    <string name="command_get_rf_power">Get RF Power</string>
    <string name="get_rf_power_values">RF-power: level = %1$d, mode = %2$d</string>
    <string name="command_set_iso15693_opt_bit">Set ISO15693 Option Bits (only HF)</string>
    <string name="command_get_iso15693_opt_bit">Get ISO15693 Option Bits (only HF)</string>
    <string name="get_iso15693_option_bits_value">ISO-15693 option-bits = %1$s H</string>
    <string name="command_set_iso15693_ext_flag">Set ISO15693 Extension Flag (only HF)</string>
    <string name="command_get_iso15693_ext_flag">Get ISO15693 Extension Flag (only HF)</string>
    <string name="get_iso15693_extension_flag_values">ISO15693 extension-flag: flag = %1$b, permanent = %2$b</string>
    <string name="command_set_iso15693_bitrate">Set ISO15693 Bitrate (only HF)</string>
    <string name="command_get_iso15693_bitrate">Get ISO15693 Bitrate (only HF)</string>
    <string name="get_iso15693_bitrate_values">ISO15693 bit-rate: rate = %1$d, permanent = %2$b</string>
    <string name="command_iso15693_tunnel">Start Tunnel</string>
    <string name="starting_iso15693_tunnel">Starting tunnel</string>
    <string name="iso15693_tunnel_data_value">Tunnel: data = %1$s</string>
    <string name="command_set_epc_freq">Set EPC Frequency (only UHF)</string>
    <string name="command_get_epc_freq">Get EPC Frequency (only UHF)</string>
    <string name="get_epc_frequency_values">EPC-frequency = %1$d</string>
    <string name="command_get_security_level">Get Security Level</string>
    <string name="get_security_level_values">Security level: level = %1$d</string>
    <string name="command_set_security_level_0">Set Security Level: NONE</string>
    <string name="command_set_security_level_1">Set Security Level: LEGACY</string>
    <string name="command_set_security_level_2">Set Security Level: LESC</string>
    <string name="command_set_inventory_mode_scan_on_input">Set Scan On Input</string>
    <string name="command_set_inventory_mode_normal">Set Normal Scan</string>
    <string name="command_set_inventory_format">Set Inventory Format</string>
    <string name="command_setting_inventory_format">Setting Inventory Format</string>
    <string name="command_inventory_format_sett">Inventory Format Set</string>
    <string name="set_inventory_format_dialog_title">Set Inventory Format</string>
    <string name="set_inventory_format_dialog_format_type">Type</string>
    <string name="set_inventory_format_dialog_button">Set Format</string>
    <string name="command_do_inventory">Do Inventory</string>
    <string name="inventory_tag_discovered">Discovered tag ID = %1$s</string>
    <string name="command_write_access_password">Write access password for selected tag</string>
    <string name="writing_access_password">Writing access password on Tag #%1$s</string>
    <string name="password_written">Password written</string>
    <string name="command_read_tag">Read selected tag</string>
    <string name="reading_tag">Reading Tag #%1$s</string>
    <string name="data_read">Tag read data: %1$s</string>
    <string name="command_write_tag">Write selected tag</string>
    <string name="writing_tag">Writing Tag #%1$s</string>
    <string name="data_written">Tag data written</string>
    <string name="command_lock_tag">Lock selected tag</string>
    <string name="locking_tag">Locking Tag #%1$s</string>
    <string name="tag_locked">Tag locked</string>
    <string name="command_read_tid">Read TID for selected tag</string>
    <string name="reading_tid">Reading TID on Tag #%1$s</string>
    <string name="tid_read">TID: %1$s</string>
    <string name="command_write_id">Write ID to selected tag</string>
    <string name="writing_id">Writing ID to tag</string>
    <string name="tag_id_written">Tag ID written</string>
    <string name="command_write_kill_password">Write kill password for selected tag</string>
    <string name="writing_kill_password">Writing kill password on Tag #%1$s</string>
    <string name="command_kill">Kill selected tag</string>
    <string name="killing_tag">Killing Tag #%1$s</string>
    <string name="tag_killed">Tag killed</string>
    <string name="command_get_name">Get Name</string>
    <string name="get_name_value">Name = %1$s</string>
    <string name="command_set_name">Set Name</string>
    <string name="setting_name">Setting name %1$s</string>
    <string name="command_default_ble_configuration">Default BLE configuration</string>
    <string name="command_ble_firmware_version">Get BLE Firmware version</string>
    <string name="ble_firmware_version_value">BLE Firmware-version = %1$s</string>
    <string name="command_set_advertising_interval">Set advertising interval</string>
    <string name="command_get_advertising_interval">Get advertising interval</string>
    <string name="get_advertising_interval_value">Advertising interval = %1$d</string>
    <string name="command_set_ble_power">Set BLE power</string>
    <string name="command_get_ble_power">Get BLE power</string>
    <string name="ble_power_value">BLE power = %1$d</string>
    <string name="command_set_connection_interval">Set connection interval</string>
    <string name="command_get_connection_interval">Get connection interval</string>
    <string name="connection_interval_values">Connection interval: min = %1$.2f, max = %2$.2f</string>
    <string name="command_set_slave_latency">Set slave latency</string>
    <string name="command_get_slave_latency">Get slave latency</string>
    <string name="slave_latency_value">Slave latency = %1$d</string>
    <string name="command_set_supervision_timeout">Set supervision timeout</string>
    <string name="command_get_supervision_timeout">Get supervision timeout</string>
    <string name="supervision_timeout_value">Supervision timeout = %1$d</string>
    <string name="command_get_connection_interval_and_mtu">Get connection interval and MTU</string>
    <string name="connection_interval_and_mtu_values">Connection interval and MTU: connection interval = %1$.2f, MTU =
        %2$d</string>
    <string name="command_get_mac_address">Mac address</string>
    <string name="mac_address_value">Mac address = %1$s</string>
    <string name="command_read_user_memory_0">Read user memory block 0</string>
    <string name="command_read_user_memory_1">Read user memory block 1</string>
    <string name="user_memory_value">User Memory = %1$s</string>
    <string name="command_write_user_memory">Write user memory </string>
    <string name="writing_user_memory">Writing user memory: %1$s</string>
    <string name="command_reset">Reset</string>
    <string name="command_default_setup">Default Setup</string>
    <string name="command_reboot">Reboot</string>
    <string name="command_off">Off</string>
    <string name="command_set_hmi">Set HMI</string>
    <string name="command_get_hmi_support">Get HMI support</string>
    <string name="hmi_support_values">HMI support: led color = %1$d, sound vibration = %2$d, button number =
        %3$d</string>
    <string name="command_set_sound_for_inventory">Set sound for inventory</string>
    <string name="command_get_sound_for_inventory">Get sound for inventory</string>
    <string name="sound_for_inventory_values">Sound for inventory: sound frequency = %1$d, sound on time = %2$d,
        sound off time = %3$d, sound repetition = %4$d</string>
    <string name="command_set_sound_for_command">Set sound for command</string>
    <string name="command_get_sound_for_command">Get sound for command</string>
    <string name="sound_for_command_values">Sound for command: sound frequency = %1$d, sound on time = %2$d,
        sound off time = %3$d, sound repetition = %4$d</string>
    <string name="command_set_sound_for_error">Set sound for error</string>
    <string name="command_get_sound_for_error">Get sound for error</string>
    <string name="sound_for_error_values">Sound for error: sound frequency = %1$d, sound on time = %2$d,
        sound off time = %3$d, sound repetition = %4$d</string>
    <string name="command_set_led_for_inventory">Set led for inventory</string>
    <string name="command_get_led_for_inventory">Get led for inventory</string>
    <string name="led_for_inventory_values">Led for inventory: light color = %1$d, light on time = %2$d, light off
        time = %3$d, light repetition = %4$d</string>
    <string name="command_set_led_for_command">Set led for command</string>
    <string name="command_get_led_for_command">Get led for command</string>
    <string name="write_dialog_data_tag">Data</string>
    <string name="rw_dialog_address_tag">Address</string>
    <string name="dialog_password">Password</string>
    <string name="tunnel_dialog_command_text">Command</string>
    <string name="tunnel_dialog_encrypted_text">Encrypted</string>
    <string name="tunnel_dialog_encrypted_flag_text">Flag</string>
</resources>